[package]
name = "upbitoms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini = "1.3"
clap = "3.2"
uuid = { version="1.1", features=["v4", "fast-rng", "macro-diagnostics"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
reqwest = "0.11"
tokio = { version="1.21", features=["full"] }